# pybazaar

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.webpack  README.md  config.py  docker-compose.yml  manage.py  package.json  pyproject.toml  run.py  webpack-stats.json  webpack.config.js
app/: __init__.py  db.py  views.py
app/models/: user.py
app/templates/: index.html
authentication/: apps.py  backends.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_userprofile_username.py  0003_alter_userprofile_options_alter_userprofile_managers_and_more.py  0003_alter_userprofile_username.py  0004_userprofile_is_superuser.py  0004_userprofile_phone_number.py  0005_remove_userprofile_phone_number_and_more.py  0005_userprofile_groups_userprofile_user_permissions_and_more.py  0006_alter_userprofile_first_name_and_more.py  0006_alter_userprofile_username.py
authentication/templates/: login.html  register.html
frontend/: index.js
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_availabilitystatus_status_name_and_more.py  0003_category_category_key_alter_category_category_name.py  0004_rename_category_key_category_category_slug_and_more.py  0005_category_created_at_category_updated_at.py  0006_brand_created_at_brand_updated_at_product_created_at_and_more.py
pybazaar/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/bundles/: main.js
templates/: base.html  contact.html  home.html  index.html
templates/base/: footer.html  header.html
(+23 files in other folders)
