[tool.poetry]
name = "pybazaar"
version = "0.1.0"
description = ""
authors = ["Vinda <vinda@smartshore.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dotenv = "^0.9.9"
flask = "^3.1.0"
sqlalchemy = "^2.0.39"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
