[tool.poetry]
name = "pybazaar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
django-webpack-loader = "^3.1.1"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
