[tool.poetry]
name = "pybazaar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
django-webpack-loader = "^3.1.1"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.0"
black = "^25.1.0"
flake8 = "^7.1.2"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py310"]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.docker
  | \.idea
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
